--- a/Fuente/styles/sass/formulario-registro.scss
+++ b/Fuente/styles/sass/formulario-registro.scss
@@ -9,6 +9,6 @@
 @import 'layout/header';
 @import 'layout/footer';
 
-@import 'pages/inicio-sesion';
+@import 'pages/formulario-registro';
 
 @import 'utils/media_query';
