--- a/Fuente/styles/sass/formulario-reserva.scss
+++ b/Fuente/styles/sass/formulario-reserva.scss
@@ -8,7 +8,10 @@
 
 @import 'layout/header';
 @import 'layout/footer';
+@import 'layout/section';
 
-@import 'pages/inicio-sesion';
+@import 'pages/formulario-reserva';
 
 @import 'utils/media_query';
+
+@import 'img/img-reserva';
