--- a/Fuente/styles/sass/pages/_formulario-reserva.scss
+++ b/Fuente/styles/sass/pages/_formulario-reserva.scss
@@ -58,6 +58,7 @@
 }   
 
 #mesYear {
+    text-align: center;
     font-family: $font-Secondary;
     font-size: 1.5rem;
     color: $color-Neutro-Negro;
