--- a/Fuente/styles/css/formulario-reserva.css
+++ b/Fuente/styles/css/formulario-reserva.css
@@ -376,6 +376,7 @@ input[type=submit]:hover {
 }
 
 #mesYear {
+  text-align: center;
   font-family: "Questrial";
   font-size: 1.5rem;
   color: #222222;
