--- a/Fuente/styles/sass/pages/_sobre-nosotros.scss
+++ b/Fuente/styles/sass/pages/_sobre-nosotros.scss
@@ -5,10 +5,9 @@
 // Aqui voy a definir el estilo de la pagina sobre_nosotros.html
 .contenedor-filosofias {
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
     margin: 5rem auto;
-    width: 95%;
+    width: 80%;
     height: auto;
     background-color: $color-Secundario;
     border: 0.15rem solid $color-Neutro-Marron;
@@ -25,10 +24,11 @@
     width: 18rem;
 
     h3 {
-        margin: 2rem 0 1rem;
+        margin: 1rem 0 0.5rem;
     }
 
     p {
+        font-style: italic;
         text-align: center;
         color: $color-Neutro-Blanco;
         width: 100%; 
@@ -76,9 +76,6 @@
 }
 
 @include media-queries(tablet) {
-    .contenedor-filosofias {
-        justify-content: space-between;
-    }
     .contenedor-historia {
         width: 70%;
     }
