--- a/Fuente/styles/css/cuenta.css
+++ b/Fuente/styles/css/cuenta.css
@@ -405,7 +405,7 @@ input[type=submit] {
 }
 @media (min-width: 320px) {
   .seccion-cuenta {
-    padding: 0;
+    padding: 0.15rem;
   }
   i.fa-regular {
     font-size: 2rem;
@@ -426,10 +426,11 @@ input[type=submit] {
     margin: auto 1rem auto 0;
   }
   .inicio-formulario label {
-    font-size: 1.5rem;
+    font-size: 1rem;
   }
   input[type=text], input[type=email], input[type=password] {
-    font-size: 1rem;
+    font-size: 0.75rem;
+    height: 1rem;
   }
   input[type=submit] {
     width: 100%;
@@ -437,6 +438,20 @@ input[type=submit] {
   }
 }
 @media (min-width: 480px) {
+  input[type=submit] {
+    width: 65%;
+  }
+}
+@media (min-width: 768px) {
+  .seccion-cuenta {
+    padding: 2rem;
+  }
+  i.fa-regular {
+    font-size: 5rem;
+  }
+  .menu-cuenta h3 {
+    font-size: 2rem;
+  }
   .contenedor-perfil h1 {
     font-size: 4.8rem;
   }
@@ -446,28 +461,15 @@ input[type=submit] {
   .contenedor-perfil h3 {
     font-size: 2rem;
   }
-  .menu-cuenta h3 {
-    font-size: 2rem;
-  }
-  i.fa-regular {
-    font-size: 5rem;
-  }
-  input[type=submit] {
-    font-size: 1.25rem;
-  }
-}
-@media (min-width: 768px) {
-  .seccion-cuenta {
-    padding: 2rem;
-  }
   .inicio-formulario label {
     font-size: 2rem;
   }
   input[type=text], input[type=email], input[type=password] {
     font-size: 1.25rem;
+    height: 2rem;
   }
   input[type=submit] {
-    width: 65%;
+    font-size: 1.25rem;
   }
 }
 @media (min-width: 1024px) {
