--- a/Fuente/styles/css/tienda.css
+++ b/Fuente/styles/css/tienda.css
@@ -333,9 +333,26 @@ footer {
   box-shadow: 0 10px 5px 0 rgba(34, 34, 34, 0.5);
 }
 
-.enlaces {
+.enlaces-secundarios {
   display: flex;
   padding: 1rem;
+  z-index: 2;
+}
+
+.menu-desplegable-sec {
+  display: none;
+  background: none;
+  border: none;
+  color: #F1E7E7;
+  align-self: center;
+  font-size: 5rem;
+  margin-right: 1rem;
+  cursor: pointer;
+  transition: all 0.5s;
+}
+.menu-desplegable-sec:hover {
+  transform: scale(1, 0.75);
+  color: #F1A2A2;
 }
 
 input[type=text] {
@@ -357,7 +374,7 @@ input[type=text]:focus {
   box-shadow: 3px 4px 0px 1px #222222;
 }
 
-i.fa-solid {
+i.fa-cart-shopping {
   font-size: 1.5rem;
   padding: 1rem;
   background-color: #961316;
@@ -365,17 +382,21 @@ i.fa-solid {
   border-radius: 2.5rem;
   transition: all 0.25s ease;
 }
-
-i.fa-solid:hover {
+i.fa-cart-shopping:hover {
   color: #222222;
   background-color: #F1E7E7;
   border: 0.2rem solid #961316;
 }
 
+.contenedor-productos {
+  width: 100%;
+  display: flex;
+  gap: 1rem;
+}
+
 .menu-terciario {
   display: flex;
   flex-direction: column;
-  float: left;
   border-right: 0.15rem solid #222222;
 }
 .menu-terciario h3 {
@@ -409,6 +430,20 @@ i.fa-solid:hover {
   margin: 1rem;
 }
 
+.menu-filtros {
+  display: none;
+  background: none;
+  border: none;
+  color: #222222;
+  font-size: 3rem;
+  cursor: pointer;
+  transition: all 0.5s;
+}
+.menu-filtros:hover {
+  transform: scale(1, 0.75);
+  color: #F1A2A2;
+}
+
 input[type=checkbox], input[type=radio] {
   width: 1rem;
   height: 1rem;
@@ -421,7 +456,7 @@ input[type=checkbox]:checked, input[type=radio]:checked {
 }
 
 input[type=range] {
-  -webkit-appearance: none;
+  appearance: none;
   width: 100%;
   height: 15px;
   border-radius: 1rem;
@@ -446,59 +481,183 @@ input[type=range]::-webkit-slider-thumb {
   cursor: pointer;
 }
 
-.contenedor-productos {
+.productos {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
-  gap: 1.5rem;
-  width: 90%;
-  margin: auto auto 2.5rem;
+  margin: auto;
 }
 
 .img-prod-tienda {
-  position: relative;
-  width: 100%;
-  border: 4px solid #961316;
-  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 90%;
   overflow: hidden;
-  filter: brightness(0.75) contrast(110%) saturate(160%) sepia(20%);
-  box-shadow: 0px 2px 8px 0px rgba(34, 34, 34, 0.5);
-  transition: all 0.25s;
-}
-.img-prod-tienda:hover {
-  filter: brightness(0.9);
-}
-.img-prod-tienda:hover .img-desc {
-  opacity: 0;
-  transition: all 0.25s;
+  margin: 3rem 0.5rem 0.5rem;
+  padding-bottom: 2rem;
+  border-bottom: 0.15rem solid #362624;
 }
 
 .img-main-tienda {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  width: 19rem;
+  height: 19rem;
+  object-fit: contain;
+  border: 0.15rem solid #961316;
+  border-radius: 1rem;
+  box-shadow: 0px 2px 8px 0px rgba(34, 34, 34, 0.5);
+  cursor: pointer;
+  transition: all 0.25s;
+}
+.img-main-tienda:hover {
+  width: 18.5rem;
+  height: 18.5rem;
 }
 
 .img-desc {
-  position: absolute;
-  height: 30%;
-  bottom: 0;
   padding: 0 1rem;
-  background-color: #362624;
-  border-top: 0.15rem solid #F1A2A2;
+  text-align: center;
   transition: all 0.5s;
 }
-.img-desc h1 {
-  text-align: center;
-  font-size: 2rem;
-  color: #F1A2A2;
+.img-desc h3 {
+  color: #222222;
 }
 .img-desc p {
+  text-indent: 0;
   text-align: center;
-  color: #F1E7E7;
-  margin-top: 0.25rem;
+  margin: 0.25rem 0;
 }
 
+@media (min-width: 320px) {
+  .menu-desplegable-sec {
+    display: block;
+    margin-left: auto;
+    font-size: 3rem;
+    position: relative;
+  }
+  .enlaces-secundarios {
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    position: absolute;
+    right: 0;
+    transform: translateY(-1rem);
+    visibility: hidden;
+  }
+  .enlaces-secundarios.activo-sec {
+    visibility: visible;
+    top: 41.9rem;
+    background-color: #362624;
+    box-shadow: inset 0 10px 5px 0 rgba(34, 34, 34, 0.5);
+    transform: translateY(0);
+    transition: all 0.5s;
+    z-index: 1;
+  }
+  input[type=text] {
+    width: 40%;
+  }
+  .contenedor-productos {
+    flex-direction: column;
+  }
+  .menu-terciario {
+    border-right: 0;
+  }
+  .menu-terciario h3 {
+    border-bottom: 0;
+  }
+  .formulario-terciario {
+    display: none;
+  }
+  .menu-filtros {
+    display: flex;
+    justify-content: center;
+    right: 0;
+    border-bottom: 0.15rem solid #222222;
+    padding: 0 0 1rem;
+  }
+  .productos {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(9, 1fr);
+  }
+  .img-prod-tienda {
+    width: 90%;
+  }
+  .img-main-tienda {
+    width: 17rem;
+    height: 17rem;
+  }
+}
+@media (min-width: 480px) {
+  .enlaces-secundarios.activo-sec {
+    top: 45.9rem;
+  }
+  input[type=text] {
+    width: auto;
+  }
+  .img-prod-tienda {
+    width: 100%;
+  }
+  .img-main-tienda {
+    width: 19rem;
+    height: 19rem;
+  }
+}
+@media (min-width: 768px) {
+  .productos {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(4, 1fr);
+  }
+}
+@media (min-width: 1024px) {
+  .menu-desplegable-sec {
+    display: none;
+  }
+  .enlaces-secundarios {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    visibility: visible;
+    transform: none;
+    font-size: 0.75rem;
+    padding: 0.25rem;
+  }
+  .enlaces-secundarios.activo-sec {
+    top: 0;
+    width: auto;
+    background-color: none;
+    box-shadow: none;
+    transition: none;
+  }
+  .contenedor-productos {
+    flex-direction: row;
+  }
+  .menu-terciario {
+    border-right: 0.15rem solid #222222;
+  }
+  .menu-terciario h3 {
+    border-bottom: 0.15rem solid #222222;
+  }
+  .formulario-terciario {
+    display: block;
+  }
+  .menu-filtros {
+    display: none;
+  }
+  .img-prod-tienda {
+    width: 90%;
+  }
+}
+@media (min-width: 1600px) {
+  .enlaces-secundarios {
+    font-size: 1.25rem;
+    padding: 1rem;
+  }
+  .productos {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+  }
+}
 @media (min-width: 320px) {
   body {
     padding-top: 5rem;
