--- a/Fuente/styles/sass/img/_img-index.scss
+++ b/Fuente/styles/sass/img/_img-index.scss
@@ -1,7 +1,7 @@
 // Importo los Mixins para generar los media queries
 @import '../utils/mixins';
 
-// Imagen del index
+// Imagen del Index
 .img-index {
     filter: brightness(0.55) contrast(120%) saturate(110%);
     @include media-img-principal("hero-PaginaPrincipal");
