--- a/Fuente/styles/sass/img/_img-tienda.scss
+++ b/Fuente/styles/sass/img/_img-tienda.scss
@@ -1,7 +1,7 @@
 // Importo los Mixins para generar los media queries
 @import '../utils/mixins';
 
-// Imagen de la Carta
+// Imagen de la Tienda
 .img-tienda {
     filter: brightness(0.55) contrast(90%) saturate(90%);
     @include media-img-principal("hero-Tienda");
