--- a/Fuente/styles/sass/pages/_tienda.scss
+++ b/Fuente/styles/sass/pages/_tienda.scss
@@ -12,9 +12,27 @@
     box-shadow: 0 10px 5px 0 $color-Neutro-Negro-rgba;
 }
 
-.enlaces {
+.enlaces-secundarios {
     display: flex;
     padding: 1rem;
+    z-index: 2;
+}
+
+.menu-desplegable-sec {
+    display: none;
+    background: none;
+    border: none;
+    color: $color-Neutro-Blanco;
+    align-self: center;
+    font-size: 5rem;
+    margin-right: 1rem;
+    cursor: pointer;
+    transition: all 0.5s;
+
+    &:hover {
+        transform: scale(1,0.75);
+        color: $color-Terciario;
+    }
 }
 
 input[type="text"] {
@@ -40,25 +58,30 @@ input[type="text"] {
     }
 }
 
-i.fa-solid {
+i.fa-cart-shopping {
     font-size: 1.5rem;
     padding: 1rem;
     background-color: $color-Principal;
     border: 0.2rem solid $color-Neutro-Blanco;
     border-radius: 2.5rem;
     transition: all 0.25s ease;
+
+    &:hover {
+        color: $color-Neutro-Negro;
+        background-color: $color-Neutro-Blanco;
+        border: 0.2rem solid $color-Principal;
+    }
 }
 
-i.fa-solid:hover {
-    color: $color-Neutro-Negro;
-    background-color: $color-Neutro-Blanco;
-    border: 0.2rem solid $color-Principal;
+.contenedor-productos {
+    width: 100%;
+    display: flex;
+    gap: 1rem;
 }
 
 .menu-terciario {
     display: flex;
     flex-direction: column;
-    float: left;
     border-right: 0.15rem solid $color-Neutro-Negro;
 
     h3 {
@@ -95,6 +118,21 @@ i.fa-solid:hover {
     }
 }
 
+.menu-filtros {
+    display: none;
+    background: none;
+    border: none;
+    color: $color-Neutro-Negro;
+    font-size: 3rem;
+    cursor: pointer;
+    transition: all 0.5s;
+
+    &:hover {
+        transform: scale(1,0.75);
+        color: $color-Terciario;
+    }
+}
+
 input[type="checkbox"], input[type="radio"] {
     width: 1rem;
     height: 1rem;
@@ -108,7 +146,7 @@ input[type="checkbox"], input[type="radio"] {
 }
 
 input[type="range"] {
-    -webkit-appearance: none;
+    appearance: none;
     width: 100%;
     height: 15px;
     border-radius: 1rem;
@@ -133,59 +171,189 @@ input[type="range"]::-webkit-slider-thumb {
     cursor: pointer;
 }
 
-.contenedor-productos {
+.productos {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    gap: 1.5rem;
-    width: 90%;
-    margin: auto auto 2.5rem;
+    margin: auto;
 }
 
 .img-prod-tienda {
-    position: relative;
-    width: 100%;
-    border: 4px solid $color-Principal;
-    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
     overflow: hidden;
-    filter: brightness(0.75) contrast(110%) saturate(160%) sepia(20%);
-    box-shadow:  0px 2px 8px 0px $color-Neutro-Negro-rgba;
-    transition: all 0.25s;
-    
-    &:hover {
-        filter: brightness(0.9);
-        
-        .img-desc {
-            opacity: 0;
-            transition: all 0.25s;
-        }
-    }
+    margin: 3rem 0.5rem 0.5rem;
+    padding-bottom: 2rem;
+    border-bottom: 0.15rem solid $color-Neutro-Marron;
 }
 
 .img-main-tienda {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    width: 19rem;
+    height: 19rem;
+    object-fit: contain;
+    border: 0.15rem solid $color-Principal;
+    border-radius: 1rem;
+    box-shadow:  0px 2px 8px 0px $color-Neutro-Negro-rgba;
+    cursor: pointer;
+    transition: all 0.25s;
+
+    &:hover {
+        width: 18.5rem;
+        height: 18.5rem;
+    }
 }
 
 .img-desc {
-    position: absolute;
-    height: 30%;
-    bottom: 0;
     padding: 0 1rem;
-    background-color: $color-Neutro-Marron;
-    border-top: 0.15rem solid $color-Terciario;
+    text-align: center;
     transition: all 0.5s;
-
-    h1 {
-        text-align: center;
-        font-size: 2rem;
-        color: $color-Terciario;
+    
+    h3 {
+        color: $color-Neutro-Negro;
     }
 
     p {
+        text-indent: 0;
         text-align: center;
-        color: $color-Neutro-Blanco;
-        margin-top: 0.25rem;
+        margin: 0.25rem 0;
+        
+    }
+}
+
+// Aqui declaro los media queries de tienda.html
+@include media-queries(small) {
+    .menu-desplegable-sec {
+        display: block;
+        margin-left: auto;
+        font-size: 3rem;
+        position: relative;
+    }
+    .enlaces-secundarios {
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        position: absolute;
+        right: 0;
+        transform: translateY(-1rem);
+        visibility: hidden;
+    }
+    .enlaces-secundarios.activo-sec{
+        visibility: visible;
+        top: 41.9rem;
+        background-color: $color-Neutro-Marron;
+        box-shadow: inset 0 10px 5px 0 $color-Neutro-Negro-rgba;
+        transform: translateY(0);
+        transition: all 0.5s;
+        z-index: 1;
+    }
+    input[type="text"] {
+        width: 40%;
+    }
+    .contenedor-productos {
+        flex-direction: column;
+    }
+    .menu-terciario {
+        border-right: 0;
+    }
+    .menu-terciario h3{
+        border-bottom: 0;
+    }
+    .formulario-terciario {
+        display: none;
+    }
+    .menu-filtros {
+        display: flex;
+        justify-content: center;
+        right: 0;
+        border-bottom: 0.15rem solid $color-Neutro-Negro;
+        padding: 0 0 1rem;
+    }
+    .productos {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(9, 1fr);
+    }
+    .img-prod-tienda {
+        width: 90%;
+    }
+    .img-main-tienda {
+        width: 17rem;
+        height: 17rem;
+    }
+}
+
+@include media-queries(medium) {
+    .enlaces-secundarios.activo-sec{
+        top: 45.9rem;
+    }
+    input[type="text"] {
+        width: auto;
+    }
+    .img-prod-tienda {
+        width: 100%;
+    }
+    .img-main-tienda {
+        width: 19rem;
+        height: 19rem;
+    }
+}
+
+@include media-queries(tablet) {
+    .productos {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(4, 1fr);
+    }
+}
+
+@include media-queries(laptop) {
+    .menu-desplegable-sec {
+        display: none;
+    }
+    .enlaces-secundarios {
+        display: flex;
+        flex-direction: row;
+        position: relative;
+        visibility: visible;
+        transform: none;
+        font-size: 0.75rem;
+        padding: 0.25rem;
+    }
+    .enlaces-secundarios.activo-sec {
+        top: 0;
+        width: auto;
+        background-color: none;
+        box-shadow: none;
+        transition: none;
+    }
+    .contenedor-productos {
+        flex-direction: row;
+    }
+    .menu-terciario {
+        border-right: 0.15rem solid $color-Neutro-Negro;
+    }
+    .menu-terciario h3{
+        border-bottom: 0.15rem solid $color-Neutro-Negro;
+    }
+    .formulario-terciario {
+        display: block;
+    }
+    .menu-filtros {
+        display: none;
+    }
+    .img-prod-tienda {
+        width: 90%;
+    }
+}
+
+@include media-queries(large) {
+    .enlaces-secundarios {
+        font-size: 1.25rem;
+        padding: 1rem;
+    }
+    .productos {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
     }
 }
