--- a/Fuente/styles/sass/pages/_formulario-reserva.scss
+++ b/Fuente/styles/sass/pages/_formulario-reserva.scss
@@ -57,7 +57,7 @@
     @extend %estilo-base;
 }   
 
-#mesYear {
+.mesYear {
     text-align: center;
     font-family: $font-Secondary;
     font-size: 1.5rem;
